--- a/index.html
+++ b/index.html
@@ -37,6 +37,30 @@
             <p>Do you think I like reading?</p>
             <p>Do you think I've been to more than 3 countries? </p>
             <p>Do you agree with me on preferriing cats over dogs?</p>
+
+            <p>my top ten favourit travel destionations:</p>
+            <ol>
+                <li>Spain</li>
+                <li>Thiland</li>
+                <li>switzerland</li>
+                <li>Maldives</li>
+                <li>Turkey</li>
+                <li>India</li>
+                <li>Georgia</li>
+                <li>Moroco</li>
+                <li>Qatar</li>
+                <li>The united states</li>
+            </ol>
+
+            <p>my education and work experience:</p>
+            <ul>
+                <li>diploma in pharmacy</li>
+                <li>diploma in social work</li>
+                <li>worked as a pharmacist in a community pjarmacy</li>
+                <li>worked with in humanitarian sector with multiple NGOs</li>
+            </ul>
+
+
         </section>
 
     </main>
