adding p by afnan

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li>worked as a pharmacist in a community pjarmacy</li>
                 <li>worked with in humanitarian sector with multiple NGOs</li>
             </ul>
-
+            <p>adding p by afnan</p>
 
         </section>
 
